<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1"
        >

        <item
            android:id="@+id/about"
            android:title="@string/about" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2"
        >

        <item
            android:id="@+id/feedback"
            android:title="@string/feedback_form" />
        <item
            android:id="@+id/download"
            android:title="@string/download_questions" />

        <item android:id="@+id/other_apps"
            android:title="@string/other_apps"/>

        <item android:id="@+id/rate"
            android:title="@string/rate_app"


            />
    </group>
</menu>